Added 'heatmap' like function

--- a/Strava.ipynb
+++ b/Strava.ipynb
@@ -1023,7 +1023,7 @@
     "fig, axs = plt.subplots(columns,rows,figsize=(1800*px, 1800*px))\n",
     "# Chart title settings \n",
     "fdct = {'color': 'k', 'fontsize': 50, 'fontweight': 3, 'family': 'Impact'}\n",
-    "st = fig.suptitle(\"puntofisso's lockdown run \\\"heatmap'\\\"\", y=1.05, **fdct) \n",
+    "st = fig.suptitle(\"puntofisso's lockdown runs \\\"heatmap'\\\"\", y=1.05, **fdct) \n",
     "# This gives the chart a better grid setting\n",
     "fig.tight_layout() \n",
     "\n",
