Added comments to clarify columns and rows

--- a/Strava.ipynb
+++ b/Strava.ipynb
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 87,
    "id": "84d1b942-3a82-4937-9dd8-5bcaf33008d1",
    "metadata": {},
    "outputs": [
@@ -947,7 +947,7 @@
     "# General chart settings\n",
     "\n",
     "# These four lines create the grid and make it as big as the screen\n",
-    "# Make sure that columns and rows are consistent with the total number (if the grid slots < rows, it will be messy)\n",
+    "# Make sur e that columns and rows are consistent with the total number (if the grid slots < rows, it will be messy)\n",
     "columns=6\n",
     "rows=7\n",
     "px = 1/plt.rcParams['figure.dpi']  # pixel in inches\n",
@@ -992,13 +992,13 @@
     "# \"Hide\" empty slots in the grid\n",
     "[fig.delaxes(ax) for ax in axs.flatten() if not ax.has_data()]\n",
     "        \n",
-    "plt.savefig('printfig.png', dpi=300, format='png', metadata=None, bbox_extra_artists=[st], bbox_inches='tight') # must come before show\n",
+    "plt.savefig('RUNS-grid.png', dpi=300, format='png', metadata=None, bbox_extra_artists=[st], bbox_inches='tight') # must come before show\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 88,
    "id": "a47d6682-8b83-417b-b5c7-7a43dc7bdc7f",
    "metadata": {},
    "outputs": [
@@ -1051,7 +1051,7 @@
     "    gdf.plot( ax=thisax, linewidth=0.3 )\n",
     "\n",
     "        \n",
-    "plt.savefig('printfig.png', dpi=300, format='png', metadata=None, bbox_extra_artists=[st], bbox_inches='tight') # must come before show\n",
+    "plt.savefig('RUNS-heatmap.png', dpi=300, format='png', metadata=None, bbox_extra_artists=[st], bbox_inches='tight') # must come before show\n",
     "plt.show()"
    ]
   },
