Added comments to clarify columns and rows

--- a/Strava.ipynb
+++ b/Strava.ipynb
@@ -974,7 +974,7 @@
     "    thisax.invert_yaxis()\n",
     "\n",
     "    # Settings for each plot in the grid\n",
-    "    thisax.set_title(str(i) + \" \" + str(j) + \" \" + row['Activity Date'].strftime('%d %b %Y') + \"\\n\" + str(round(row['Distance'],1)) + \" km\",y=0.2, pad=-25, verticalalignment=\"top\")\n",
+    "    thisax.set_title(row['Activity Date'].strftime('%d %b %Y') + \"\\n\" + str(round(row['Distance'],1)) + \" km\",y=0.2, pad=-25, verticalalignment=\"top\")\n",
     "    thisax.legend(\" \").set_visible(False)\n",
     "    thisax.spines[['right', 'top', 'left', 'bottom']].set_visible(False)\n",
     "\n",
